fixed alignment of body to be equal distance from nav bar and footer

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -24,7 +24,7 @@
     flex-direction: row;
     gap: 1em;
     padding: 15px;
-    margin: 10px;
+    margin: 15px;
 }
 
 .contactItem
