--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -4,6 +4,8 @@
 nav
 {
     display: flex;
+    padding: 20px;
+    margin: 20px;
 }
 
 .menu
